--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
         Добро пожаловать в игру! Здесь вы должны запоминать пары и тренировать память
         \n\nПравила:\n1. Найдите пары одинаковых карт\n2. Используйте подсказки\n3. Удачи!
     </string>
-    <string name="rules_game1">Правила игры 1: lalala</string>
-    <string name="rules_game2">Правила игры 2: lalala</string>
-    <string name="rules_game3">Правила игры 3: lalala</string>
+    <string name="rules_game1">Игрок нажимает на карточку, и она на короткое время открывается, показывая своё значение, после чего снова закрывается. Задача — найти и открыть подряд все пары одинаковых карточек.</string>
+    <string name="rules_game2">Смайлика появляются на экране по очереди, образуя цепочку. После этого игрок должен воспроизвести показанную последовательность, выбрав смайлики в нужном порядке.</string>
+    <string name="rules_game3"> В начале игры несколько квадратов поочерёдно загораются, образуя определённую последовательность. Игроку нужно запомнить этот порядок и воспроизвести его, нажимая на квадраты в той же очередности.</string>
     <string name="game_icon">Иконка игры</string>
 </resources>
